--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="table-cell">
         <div class="container">
           <h1 class="hero-title mb-4">I am Gerardo</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Developer, Software Engineering, Project Manager"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Developer, Software Engineer, Project Manager"></span></p>
         </div>
       </div>
     </div>
