Fix padding and DarkMode color

--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
                 Timeline
               </h3>
               <p class="subtitle-a">
-                Path
+                Some events
               </p>
               <div class="line-mf"></div>
             </div>
           </div>
         </div>
         <div class="row gy-4">
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="portfolio-info cardid">
               <div class="service-box">
                 <div class="service-ico">
@@ -137,13 +137,13 @@
                   <i>Software Engineering and IT Management</i>
                 </p>
               </div>
-              <div class="w-more" style="padding-top: 20px">
+              <div class="w-more">
                 <span class="w-ctegory">University of Salerno</span><br>
                 <span class="w-ctegory">Now - Set 2021</span><br>
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="portfolio-info cardid">
               <div class="service-box">
                 <div class="service-ico">
@@ -158,7 +158,7 @@
                   <i>Computer </br>Science</i>
                 </p>
               </div>
-              <div class="w-more" style="padding-top: 20px">
+              <div class="w-more">
                 <span class="w-ctegory">University of Salerno</span><br>
                 <span class="w-ctegory">Dec 2021 - Set 2018</span><br>
               </div>
@@ -186,7 +186,7 @@
           </div>
         </div>
         <div class="row gy-4">
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div id="pr" class="portfolio-info">
               <div class="title-box-2">
                 <h3>
@@ -198,13 +198,13 @@
                   <img style="width: 60%; margin-left: 20%; margin-right: 20%" src="assets/img/logoSA.png" alt="" class="img-fluid">
                 </a>
               </div>
-              <div class="w-more" style="padding-top: 20px">
+              <div class="w-more" style="padding-top: 5px">
                 <span class="w-ctegory">Cross Platform Apllication</span><br>
                 <span class="w-date">16 Feb 2023</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 card-pad">
+          <div class="col-lg-3">
             <div class="portfolio-info">
               <div class="title-box-2">
                 <h3>
@@ -216,13 +216,13 @@
                   <img style="width: 60%; margin-left: 20%; margin-right: 20%" src="assets/img/logoCoralloSmart.png" alt="" class="img-fluid">
                 </a>
               </div>
-              <div class="w-more" style="padding-top: 20px">
+              <div class="w-more" style="padding-top: 5px">
                 <span class="w-ctegory">Web Application</span><br>
                 <span class="w-date">17 Gen 2023</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="portfolio-info">
               <div class="title-box-2">
                 <h3>
@@ -234,13 +234,13 @@
                   <img style="width: 60%; margin-left: 20%; margin-right: 20%" src="assets/img/darts.png" alt="" class="img-fluid">
                 </a>
               </div>
-              <div class="w-more" style="padding-top: 20px">
+              <div class="w-more" style="padding-top: 5px">
                 <span class="w-ctegory">IntelliJ Plug-in</span><br>
                 <span class="w-date">Jun 2022</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="portfolio-info">
               <div class="title-box-2">
                 <h3>
@@ -252,13 +252,13 @@
                   <img style="width: 60%; margin-left: 20%; margin-right: 20%" src="assets/img/compiler.png" alt="" class="img-fluid">
                 </a>
               </div>
-              <div class="w-more" style="padding-top: 20px">
+              <div class="w-more" style="padding-top: 5px">
                 <span class="w-ctegory">Front-end Compiler</span><br>
                 <span class="w-date">Gen 2022</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="portfolio-info">
               <div class="title-box-2">
                 <h3>
@@ -270,13 +270,13 @@
                   <img style="width: 60%; margin-left: 20%; margin-right: 20%" src="assets/img/logoGS.png" alt="" class="img-fluid">
                 </a>
               </div>
-              <div class="w-more" style="padding-top: 20px">
+              <div class="w-more" style="padding-top: 5px">
                 <span class="w-ctegory">Android Application</span><br>
                 <span class="w-date">Jun 2021</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="portfolio-info">
               <div class="title-box-2">
                 <h3>
@@ -288,7 +288,7 @@
                   <img style="width: 60%; margin-left: 20%; margin-right: 20%" src="assets/img/sorrentoMarina.png" alt="" class="img-fluid">
                 </a>
               </div>
-              <div class="w-more" style="padding-top: 20px">
+              <div class="w-more" style="padding-top:5px">
                 <span class="w-ctegory">Web Application</span><br>
                 <span class="w-date">Feb 2021</span>
               </div>
