Remove box-shadow

--- a/portfolio-compiler.html
+++ b/portfolio-compiler.html
@@ -112,6 +112,13 @@
               </p>
               <p>
                 <strong>Goal of the project</strong>: develop the front-end of the compiler
+                </br>Some info
+              <ol>
+                <li><a href="assets/pdf/Specifiche%20lessicali.pdf" target="_blank"> <strong>Lexical info</strong> </a></li>
+                <li><a href="assets/pdf/Specifiche%20syntax%20tree%20MyFun.pdf" target="_blank"> <strong>Syntax Tree info</strong> </a></li>
+                <li><a href="assets/pdf/Scope%20e%20Typing.pdf" target="_blank"> <strong>Scope and Typing info</strong> </a></li>
+                <li><a href="assets/pdf/Inference%20Rules.pdf" target="_blank"> <strong>Inference Rules info</strong> </a></li>
+              </ol>
               </p>
             </div>
           </div>
