--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         <div class="row gy-4">
           <div class="col-lg-3">
-            <div class="portfolio-info cardid">
+            <div class="portfolio-info ">
               <div class="service-box">
                 <div class="service-ico">
                   <a href="" target="_blank"><span class="ico-circle"><i  class="bi bi-book bookid"></i></span></a>
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="portfolio-info cardid">
+            <div class="portfolio-info ">
               <div class="service-box">
                 <div class="service-ico">
                   <a href="assets/pdf/Tesi.pdf" target="_blank"><span class="ico-circle"><i  class="bi bi-book bookid"></i></span></a>
