--- a/index.html
+++ b/index.html
@@ -216,10 +216,16 @@
                   <img style="width: 60%; margin-left: 20%; margin-right: 20%" src="assets/img/logoCoralloSmart.png" alt="" class="img-fluid">
                 </a>
               </div>
-              <div class="w-more" style="padding-top: 5px">
-                <span class="w-ctegory">Web Application</span><br>
-                <span class="w-date">17 Gen 2023</span>
-              </div>
+              <div class="row">
+                <div class="col w-more" style="padding-top: 5px">
+                  <span class="w-ctegory">Web Application</span><br>
+                  <span class="w-date">17 Gen 2023</span>
+                </div>
+                <div class="col w-more" style="padding-top: 5px">
+                  <span class="w-ctegory">Web Application</span><br>
+                  <span class="w-date">17 Gen 2023</span>
+                </div>
+             </div>
             </div>
           </div>
           <div class="col-lg-3">
