--- a/compiler.html
+++ b/compiler.html
@@ -28,16 +28,13 @@
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
-            <a class="link link--nav" href="index.html#projects">Projects</a>
+            <a class="link link--nav" href="#projects">Projects</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="index.html#skills">Skills</a>
+            <a class="link link--nav" href="#skills">Skills</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="index.html#hobby">Hobby</a>
-          </li>
-          <li class="nav__list-item">
-            <a class="link link--nav" href="index.html#contact">Contact</a>
+            <a class="link link--nav" href="#contact">Contact</a>
           </li>
         </ul>
 
